[WWW-186] - refactored prompts - display prompt and highlight walters